include/epanet_2_1.h

/**
 @brief Initializes an EPANET session
 @param rptFile pointer to name of report file (to be created)
 @param binOutFile pointer to name of binary output file (to be created)
 @param UnitsType flow units flag
 @param HeadlossFormula headloss formula flag
 @return error code
 */
int  DLLEXPORT ENinit(const char *rptFile, const char *binOutFile,
  int UnitsType, int HeadlossFormula);
/**
 @brief Sets the flow units
 @param code Code of flow units to use
 @return Error code
 */
int  DLLEXPORT ENsetflowunits(int code);
/**
 @brief Set the link type code for a specified link
 @param[in,out] index The index of a link before [in] and after [out] the type change.
 @param code The new type code of the link.
 @return Error code
 @see EN_LinkType
 */
int  DLLEXPORT ENsetlinktype(int *index, int code);
/**
 @brief Sets the curve id for a specified pump index.
 @param pumpIndex The index of the pump
 @param curveIndex The index of the curve used by the pump
 @return Error code.
 */
int  DLLEXPORT ENsetheadcurveindex(int pumpIndex, int curveIndex);
/**
 @brief Specify parameters to add a new simple control
 @param[out] cindex The index of the new control. First control is index 1.
 @param ctype The type code to set for this control.
 @param lindex The index of a link to control.
 @param setting The control setting applied to the link.
 @param nindex The index of a node used to control the link, or 0 for TIMER / TIMEOFDAY control.
 @param level control point (tank level, junction pressure, or time in seconds).
 @return Error code.
 */
int  DLLEXPORT ENaddcontrol(int *cindex, int ctype, int lindex, EN_API_FLOAT_TYPE setting, int nindex, EN_API_FLOAT_TYPE level);
/**
 @brief Specify parameters to define a simple control
 @param cindex The index of the control to edit. First control is index 1.
 @param ctype The type code to set for this control.
 @param lindex The index of a link to control.
 @param setting The control setting applied to the link.
 @param nindex The index of a node used to control the link, or 0 for TIMER / TIMEOFDAY control.
 @param level control point (tank level, junction pressure, or time in seconds).
 @return Error code.
 */
int  DLLEXPORT ENsetcontrol(int cindex, int ctype, int lindex, EN_API_FLOAT_TYPE setting, int nindex, EN_API_FLOAT_TYPE level);
/**
 @brief Set a property value for a node.
 @param index The index of a node. First node is index 1.
 @param code The code for the proprty to set.
 @param v The value to set for this node and property.
 @return Error code.
 @see EN_NodeProperty
 */
int  DLLEXPORT ENsetnodevalue(int index, int code, EN_API_FLOAT_TYPE v);
/**
 @brief Set a property value for a link.
 @param index The index of a link. First link is index 1.
 @param code The code for the property to set.
 @param v The value to set for this link and property.
 @return Error code.
 @see EN_LinkProperty
 */
int  DLLEXPORT ENsetlinkvalue(int index, int code, EN_API_FLOAT_TYPE v);
/**
 @brief Add a new time pattern.
 @param id The string ID of the pattern to add.
 @return Error code.
 @see ENgetpatternindex
 */
int  DLLEXPORT ENaddpattern(char *id);
/**
 @brief Set multipliers for a specific pattern
 @param index The index of a pattern. First pattern is index 1.
 @param f An array of multipliers
 @param len The length of array f.
 @return Error code.
 @see ENgetpatternindex
 */
int  DLLEXPORT ENsetpattern(int index, EN_API_FLOAT_TYPE *f, int len);
/**
 @brief Set the multiplier for a specific pattern at a specific period.
 @param index The index of a pattern. First pattern is index 1.
 @param period The period of the pattern to set.
 @param value The value of the multiplier to set.
 @return Error code.
 */
int  DLLEXPORT ENsetpatternvalue(int index, int period, EN_API_FLOAT_TYPE value);
/**
 @brief Set the value for a time parameter.
 @param code The code for the parameter to set.
 @param value The desired value of the parameter.
 @return Error code.
 @see EN_TimeProperty
 */
int  DLLEXPORT ENsettimeparam(int code, long value);
/**
 @brief Set a value for an anlysis option.
 @param code The code for the desired option.
 @param v The desired value for the option specified.
 @return Error code.
 @see EN_Option
 */
int  DLLEXPORT ENsetoption(int code, EN_API_FLOAT_TYPE v);
/**
 @brief Sets the level of hydraulic status reporting.
 @param code Status reporting code.
 @return Error code.
 */
int  DLLEXPORT ENsetstatusreport(int code);
/**
 @brief Sets type of quality analysis called for
 @param qualcode WQ parameter code, EN_QualityType
 @param chemname Name of WQ constituent
 @param chemunits Concentration units of WQ constituent
 @param tracenode ID of node being traced (if applicable)
 @return Error code.
 @see EN_QualityType

 chemname and chemunits only apply when WQ analysis is for chemical. tracenode only applies when WQ analysis is source tracing.
 */
int  DLLEXPORT ENsetqualtype(int qualcode, char *chemname, char *chemunits, char *tracenode);
/**
 @brief Get quality analysis information (type, chemical name, units, trace node ID)
 @param[out] qualcode The EN_QualityType code being used.
 @param[out] chemname The name of the WQ constituent.
 @param[out] chemunits The cencentration units of the WQ constituent.
 @param[out] tracenode The trace node ID.
 @return Error code.
 @see EN_QualityType
 */
int  DLLEXPORT ENgetqualinfo(int *qualcode, char *chemname, char *chemunits, int *tracenode);
/**
 @brief Sets the node's base demand for a category.
 @param nodeIndex The index of a node.
 @param demandIdx The index of a demand category.
 @param baseDemand The base demand multiplier for the selected category.
 @return Error code.
 @see ENgetbasedemand
 */
int  DLLEXPORT ENsetbasedemand(int nodeIndex, int demandIdx, EN_API_FLOAT_TYPE baseDemand);
 /**
 @brief Sets the index of the demand pattern assigned to a node for a category index.
 @param nodeIndex The index of a node (first node is index 1).
 @param demandIndex The index of a category (first category is index 1).
 @param pattIndex The index of the pattern for this node and category.
 @return Error code
 */
int  DLLEXPORT ENsetdemandpattern(int nodeIndex, int demandIdx, int patIndex);
/**
 @brief Retrieves index of curve with specific ID.
 @param id The ID of a curve.
 @param[out] index The index of the named curve
 @return Error code.
 @see ENgetcurveid
 */
int  DLLEXPORT ENgetcurveindex(char *id, int *index);
/**
 @brief Retrieves ID of a curve with specific index.
 @param index The index of a curve.
 @param[out] id The ID of the curve specified.
 @return Error code.
 @see ENsetcurveindex

 NOTE: 'id' must be able to hold MAXID characters
 */
int  DLLEXPORT ENgetcurveid(int index, char *id);
/**
 @brief Retrieves number of points in a curve
 @param index The index of a curve.
 @param[out] len The length of the curve coordinate list
 @return Error code.
 @see ENgetcurvevalue
 */
int  DLLEXPORT ENgetcurvelen(int index, int *len);
/**
 @brief retrieves x,y point for a specific point number and curve
 @param curveIndex The index of a curve
 @param pointIndex The index of a point in the curve
 @param[out] x The x-value of the specified point.
 @param[out] y The y-value of the specified point.
 @return Error code.
 @see ENgetcurvelen ENsetcurvevalue
 */
int  DLLEXPORT ENgetcurvevalue(int curveIndex, int pointIndex, EN_API_FLOAT_TYPE *x, EN_API_FLOAT_TYPE *y);
/**
 @brief Sets x,y point for a specific point and curve.
 @param curveIndex The index of a curve.
 @param pointIndex The index of a point in the curve.
 @param x The x-value of the point.
 @param y The y-value of the point.
 @return Error code.
 */
int  DLLEXPORT ENsetcurvevalue(int curveIndex, int pointIndex, EN_API_FLOAT_TYPE x, EN_API_FLOAT_TYPE y);
/**
 @brief Sets x,y values for a specified curve.
 @param index The index of a curve.
 @param x An array of x-values for the curve.
 @param y An array of y-values for the curve.
 @param len The length of the arrays x and y.
 @return Error code.
 */
int  DLLEXPORT ENsetcurve(int index, EN_API_FLOAT_TYPE *x, EN_API_FLOAT_TYPE *y, int len);
/**
 @brief Adds a new curve appended to the end of the existing curves.
 @param id The name of the curve to be added.
 @return Error code.
 @see ENgetcurveindex ENsetcurve
 */
int  DLLEXPORT ENaddcurve(char *id);
/**
 @brief Gets the number of premises, true actions, and false actions and the priority of an existing rule-based control.
 @param index The index of a rule-based control.
 @param nPremises The number of conditions in a rule-based control.
 @param nTrueActions The number of actions that are executed when the conditions in the rule-based control are met.
 @param nFalseActions The number of actions that are executed when the conditions in the rule-based control are not met.
 @param priority The priority of a rule-based control.
 @return Error code.
 */
int  DLLEXPORT ENgetrule(int index, int *nPremises, int *nTrueActions, int *nFalseActions, EN_API_FLOAT_TYPE *priority);
/**
 @brief Sets the priority of the existing rule-based control.
 @param index The index of a rule-based control.
 @param priority The priority to be set in the rule-based control.
 @return Error code.
 */
int  DLLEXPORT ENsetrulepriority(int index, EN_API_FLOAT_TYPE priority);
/**
 @brief Gets the components of a premise/condition in an existing rule-based control.
 @param indexRule The index of a rule-based control.
 @param indexPremise The index of the premise.
 @param logop The logiv operator (IF/AND/OR) in the premise
 @param object The object (e.g. TANK) the premise is looking at.
 @param indexObj The index of the object (e.g. the index of the tank).
 @param variable The variable to be checked (e.g. level).
 @param relop The relashionship operator (e.g. LARGER THAN) in the premise.
 @param status The status of the object to be checked (e.g. CLOSED)
 @param value The value of the variable to be checked (e.g. 5.5)
 @return Error code.
 */
int  DLLEXPORT ENgetpremise(int indexRule, int indexPremise, int *logop, int *object, int *indexObj, int *variable, int *relop, int *status, EN_API_FLOAT_TYPE *value);
/**
 @brief Sets the components of a premise/condition in an existing rule-based control.
 @param indexRule The index of a rule-based control.
 @param indexPremise The index of the premise.
 @param logop The logiv operator (IF/AND/OR) in the premise
 @param object The object (e.g. TANK) the premise is looking at.
 @param indexObj The index of the object (e.g. the index of the tank).
 @param variable The variable to be checked (e.g. level).
 @param relop The relashionship operator (e.g. LARGER THAN) in the premise.
 @param status The status of the object to be checked (e.g. CLOSED)
 @param value The value of the variable to be checked (e.g. 5.5)
 @return Error code.
 */
int  DLLEXPORT ENsetpremise(int indexRule, int indexPremise, int logop, int object, int indexObj, int variable, int relop, int status, EN_API_FLOAT_TYPE value);
/**
 @brief Sets the index of an object in a premise of an existing rule-based control.
 @param indexRule The index of a rule-based control.
 @param indexPremise The index of the premise.
 @param indexObj The index of the object (e.g. the index of the tank).
 @return Error code.
 */
int  DLLEXPORT ENsetpremiseindex(int indexRule, int indexPremise, int indexObj);
/**
 @brief Sets the status in a premise of an existing rule-based control.
 @param indexRule The index of a rule-based control.
 @param indexPremise The index of the premise.
 @param status The status of the object to be checked (e.g. CLOSED)
 @return Error code.
 */
int  DLLEXPORT ENsetpremisestatus(int indexRule, int indexPremise, int status);
/**
 @brief Sets the value in a premise of an existing rule-based control.
 @param indexRule The index of a rule-based control.
 @param indexPremise The index of the premise.
 @param value The value of the variable to be checked (e.g. 5.5)
 @return Error code.
 */
int  DLLEXPORT ENsetpremisevalue(int indexRule, int indexPremise, EN_API_FLOAT_TYPE value);
/**
 @brief Gets the components of a true-action in an existing rule-based control.
 @param indexRule The index of a rule-based control.
 @param indexAction The index of the action when the conditions in the rule are met.
 @param indexLink The index of the link in the action (e.g. index of Pump 1)
 @param status The status of the link (e.g. CLOSED)
 @param setting The value of the link (e.g. pump speed 0.9)
 @return Error code.
 */
int  DLLEXPORT ENgettrueaction(int indexRule, int indexAction, int *indexLink, int *status, EN_API_FLOAT_TYPE *setting);
/**
 @brief Sets the components of a true-action in an existing rule-based control.
 @param indexRule The index of a rule-based control.
 @param indexAction The index of the action when the conditions in the rule are met.
 @param indexLink The index of the link in the action (e.g. index of Pump 1)
 @param status The status of the link (e.g. CLOSED)
 @param setting The value of the link (e.g. pump speed 0.9)
 @return Error code.
 */
int  DLLEXPORT ENsettrueaction(int indexRule, int indexAction, int indexLink, int status, EN_API_FLOAT_TYPE setting);
/**
 @brief Gets the components of a false-action in an existing rule-based control.
 @param indexRule The index of a rule-based control.
 @param indexAction The index of the action when the conditions in the rule are not met.
 @param indexLink The index of the link in the action (e.g. index of Pump 1)
 @param status The status of the link (e.g. CLOSED)
 @param setting The value of the link (e.g. pump speed 0.9)
 @return Error code.
 */
int  DLLEXPORT ENgetfalseaction(int indexRule, int indexAction, int *indexLink, int *status, EN_API_FLOAT_TYPE *setting);
/**
 @brief Sets the components of a false-action in an existing rule-based control.
 @param indexRule The index of a rule-based control.
 @param indexAction The index of the action when the conditions in the rule are not met.
 @param indexLink The index of the link in the action (e.g. index of Pump 1)
 @param status The status of the link (e.g. CLOSED)
 @param setting The value of the link (e.g. pump speed 0.9)
 @return Error code.
 */
int  DLLEXPORT ENsetfalseaction(int indexRule, int indexAction, int indexLink, int status, EN_API_FLOAT_TYPE setting);
/**
 @brief Returns the ID of a rule.
 @param indexRule The index of a rule-based control.
 @param id The ID of the rule
 @return Error code.
 */
int  DLLEXPORT ENgetruleID(int indexRule, char* id);
/**
 @brief Adds a new node
 @param id The name of the node to be added.
 @param nodeType The node type code
 @return Error code.
 */
int DLLEXPORT ENaddnode(char *id, int nodeType);
/**
 @brief Adds a new link
 @param id The name of the link to be added.
 @param linkType The link type code
 @param fromNode The id of the from node
 @param toNode The id of the to node
 @return Error code.
 */
int DLLEXPORT ENaddlink(char *id, int linkType, char *fromNode, char *toNode);
/**
 @brief Deletes a node
 @param nodeIndex The node index
 @return Error code.
 */
int DLLEXPORT ENdeletenode(int nodeIndex);
/**
 @brief Deletes a link
 @param linkIndex The link index
 @return Error code.
 */
int DLLEXPORT ENdeletelink(int linkIndex);